# deputydev-core

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  MAINTAINERS.md  Pipfile  README.md  pyproject.toml  setup.py
.github/workflows/: code_quality.yaml
Chunking/: Pipfile  relevant_chunks_finder.py  service.py  vector_db_chunker.py
Chunking/chunkers/: base_chunker.py  chunk.py  non_vector_db_chunker.py  vector_db_chunker.py
Chunking/chunkers/vector_store/: cleanup.py  main.py
Chunking/clients/: base_http_client.py  one_dev_client.py
Chunking/managers/: chunking_manager.py  one_dev_embedding_manager.py
Chunking/models/: chunk_info.py
Chunking/models/weaviate/: chunk_files.py
Chunking/repo/local_repo/: base_local_repo.py  factory.py
Chunking/reranker/: base_chunk_reranker.py
Chunking/reranker/handlers/: heuristic_based.py
Chunking/search/: search.py
Chunking/search/native/: lexical_search.py  search.py  vector_search.py
Chunking/search/vector_db_based/: search.py
Chunking/utils/: base_local_repo.py  config_manager.py  constants.py  document.py  enums.py  initialization_constants.py  initialization_manager.py  session_manager.py  tiktoken_operations.py
deputydev-core/clients/http/: base_http_client.py  base_http_session_manager.py
deputydev-core/services/embedding/: one_dev_embedding_manager.py
deputydev-core/services/search/: search.py
deputydev_core/: diff_tester.py
deputydev_core/clients/aws/: aws_client_manager.py
deputydev_core/clients/bedrock/: bedrock.py
deputydev_core/clients/gemini/: gemini.py
deputydev_core/clients/http/: base_http_client.py  base_http_session_manager.py
deputydev_core/clients/openai/: openai.py
deputydev_core/clients/openrouter/: openrouter.py
deputydev_core/database/: async_db_manager.py
deputydev_core/errors/tools/: tool_errors.py
deputydev_core/exceptions/: exceptions.py  llm_exceptions.py
deputydev_core/llm_handler/constants/: constants.py
deputydev_core/llm_handler/core/: base_llm_provider.py  handler.py
deputydev_core/llm_handler/dataclasses/: agent.py  main.py
deputydev_core/llm_handler/interfaces/: caches_interface.py  cancellation_interface.py  config_interface.py  file_upload_config_interfaace.py  llm_config_interface.py  provider_config_interface.py  repositories_interface.py
deputydev_core/llm_handler/prompts/: base_feature_prompt_factory.py  base_prompt.py  base_prompt_feature_factory.py
deputydev_core/llm_handler/utils/: cancellation_checker.py  file_processor.py
deputydev_core/models/dto/: chunk_file_dto.py  sqlite_file_chunk_dto.py  summarization_dto.py
deputydev_core/services/auth_token_storage/: auth_token_service.py  base_auth_token_storage_manager.py  cli_auth_token_storage_manager.py  extension_auth_token_storage_manager.py
deputydev_core/tests/: conftest.py
deputydev_core/tests/data/: README.md
deputydev_core/utils/: app_logger.py  chunk_utils.py  config_manager.py  config_setter.py  constants.py  context_value.py  context_vars.py  custom_progress_bar.py  file_indexing_monitor.py  file_type_detector.py  file_utils.py  jwt_handler.py  mcp_settings.py  mcp_utils.py  os_utils.py  response_headers_handler.py  shared_memory.py  singleton.py  weaviate.py
requirements/: base.txt
services/chunking/: chunk.py  chunk_info.py  chunking_manager.py
services/repository/: chunk_files_service.py  chunk_service.py  chunk_usages_service.py
services/tiktoken/: tiktoken.py
utils/: app_logger.py  config_manager.py  constants.py
(+226 files in other folders)
