[project]
name = "deputydev-core"
version = "3.0.6"
description = "Core library for DeputyDev"
authors = [{ name = "DeputyDev", email = "deputydev@1mg.com" }]
readme = "README.md"
requires-python = ">=3.11, <3.13"

dependencies = [
    "numpy==1.26.2",
    "prompt-toolkit==3.0.48",
    "weaviate-client==4.10.3",
    "pydantic==2.10.3",
    "xxhash==3.5.0",
    "GitPython==3.1.27",
    "giturlparse==0.12.0",
    "PyYAML==6.0.2",
    "tiktoken==0.7.0",
    "tree-sitter-languages==1.10.2",
    "tree-sitter==0.21.0",
    "tree-sitter-javascript==0.21.0",
    "aiohttp>=3.11.12",
    "diff-match-patch==20241021"
]

[dependency-groups]
dev = [
    "ruff>=0.11.9",
]

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
