[project]
name = "deputydev-core"
version = "8.0.5"
description = "Core library for DeputyDev"
authors = [{ name = "DeputyDev", email = "deputydev@1mg.com" }]
readme = "README.md"
requires-python = ">=3.11, <3.13"

dependencies = [
    "numpy==1.26.2",
    "weaviate-client==4.16.10",
    "pydantic==2.10.3",
    "xxhash==3.5.0",
    "GitPython==3.1.41",
    "giturlparse==0.12.0",
    "PyYAML==6.0.2",
    "tiktoken==0.7.0",
    "tree-sitter==0.23.2",
    "tree-sitter-language-pack==0.8.0",
    "aiohttp>=3.12.14",
    "diff-match-patch==20241021",
    "fastmcp==2.3.4",
    "mcp[cli]>=1.10.0",
    "python-Levenshtein==0.27.1",
    "protobuf>=5.29.5",
    "openai==1.78.0",
    "types-aiobotocore-bedrock-runtime==2.11.2",
    "types-aiobotocore-apigatewaymanagementapi==2.11.2",
    "types-aiobotocore-s3==2.11.2",
    "aiobotocore>=2.15.0,<3.0.0",
    "botocore>=1.35.0,<2.0.0",
    "google-genai==1.13.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "ruff==0.12.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.12.0",
    "pytest-xdist>=3.5.0",
    "pytest-html>=4.1.1",
    "pytest-json-report>=1.5.0",
    "coverage[toml]>=7.4.0",
]
